Sticky Keys: TabKey cannot be used to enter editmode #44278

Closed
opened 2015-04-06 03:19:44 +02:00 by Joshua Leung · 19 comments
Member

System Information
Windows 8.1, 64-bit

Blender Version
Broken: 7157f3dbce

Short description of error
The Tab key can't be used to toggle in and out of Edit Mode on objects.

There are no addons enabled (i.e. specifically, the pie menu addon is not enabled)

Exact steps for others to reproduce the error

  1. Default file / factory defaults
  2. Tab (over the 3D View)
**System Information** Windows 8.1, 64-bit **Blender Version** Broken: 7157f3dbce257d9f9a0df7b243e306949fb9678e **Short description of error** The Tab key can't be used to toggle in and out of Edit Mode on objects. There are no addons enabled (i.e. specifically, the pie menu addon is not enabled) **Exact steps for others to reproduce the error** 1. Default file / factory defaults 2. Tab (over the 3D View)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Julian Eisel was assigned by Joshua Leung 2015-04-06 03:19:44 +02:00
Author
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

#44281 was marked as duplicate of this issue

#44281 was marked as duplicate of this issue
Member

Eeek, this is a bit serious but I can't recreate that here. Sounds what's described later in #44275 though. Seems to come from one of the more recent changes I made, so would you mind doing a quick bisect session for me?
Before that you should make sure you're not holding the key by any chance, since we had to hardcode the stickies that will be used by the Pie Add-on holding down Tab does currently nothing, only clicking/tapping it should toggle.
Setting to "Normal" for now, but should be raised if it can't be resolved quickly and more people are affected.

Eeek, this is a bit serious but I can't recreate that here. Sounds what's described later in #44275 though. Seems to come from one of the more recent changes I made, so would you mind doing a quick bisect session for me? Before that you should make sure you're not holding the key by any chance, since we had to hardcode the stickies that will be used by the Pie Add-on holding down Tab does currently nothing, only clicking/tapping it should toggle. Setting to "Normal" for now, but should be raised if it can't be resolved quickly and more people are affected.

Added subscriber: @sindra1961

Added subscriber: @sindra1961

It was still normal with the build package of a1c2b1a8a8.

It was still normal with the build package of a1c2b1a8a8.
Member
Added subscribers: @MauroPfister, @zeauro, @Sergey, @OliverBurn, @JulianEisel

This issue was referenced by 883663a0ad

This issue was referenced by 883663a0ad7fd1cbb7bdc9cf4429217ef1f3b9de
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 883663a0ad.

Closed by commit 883663a0ad.

There's a noticeable lag pressing Tab for edit mode and so now compared to 2.74 official. I assume because it's waiting for the release event, this feels considerably less "snappy" to me. I dont like it.

There's a noticeable lag pressing Tab for edit mode and so now compared to 2.74 official. I assume because it's waiting for the release event, this feels considerably less "snappy" to me. I dont like it.

Added subscriber: @PawelLyczkowski-1

Added subscriber: @PawelLyczkowski-1

@OliverBurn Check Sticky Keys Click Timeout under Preferences > Input. I find you can lower it to about 170 without problems.

Or you can change the Tab to be press, not click. No pies then, and no lag.

@OliverBurn Check Sticky Keys Click Timeout under Preferences > Input. I find you can lower it to about 170 without problems. Or you can change the Tab to be press, not click. No pies then, and no lag.
Member

@PawelLyczkowski-1, unfortunately changing the Click Timeout doesn't help here, changing this means just the key release has to happen earlier.

@PawelLyczkowski-1, unfortunately changing the Click Timeout doesn't help here, changing this means just the key release has to happen earlier.

Added subscriber: @emilian

Added subscriber: @emilian

Just a follow-up on the later report on #44275.

Thanks, that's fixed here too.

Just a follow-up on the later report on #44275. Thanks, that's fixed here too.

I dont use Pies. I dont want sticky keys. How about making this thing a user preference to "opt-in" on, instead of a forced feature.

I dont want to sounds like a negative nancy Julian, it's just this is going to affect everyone and they've already started to notice.

I dont use Pies. I dont want sticky keys. How about making this thing a user preference to "opt-in" on, instead of a forced feature. I dont want to sounds like a negative nancy Julian, it's just this is going to affect everyone and they've already started to notice.

Severin said that it did not have a meaning to change Sticky Keys Click Timeout, but Tab key came to react even if I had been pushing the key for a long time to some extent if I raised a value of Click Timeout so that plyczkowski said.

version 2.74 (sub 4), branch b'master', commit date b'2015-04-07' b'01:25', hash b'9510137', b'Release'

There was sometimes time not to react with the existing value.

Severin said that it did not have a meaning to change Sticky Keys Click Timeout, but Tab key came to react even if I had been pushing the key for a long time to some extent if I raised a value of Click Timeout so that plyczkowski said. version 2.74 (sub 4), branch b'master', commit date b'2015-04-07' b'01:25', hash b'9510137', b'Release' There was sometimes time not to react with the existing value.

Hmm, now "loop cut and slide" (ctrl+r) is kinda broken.

Previously you would click once for selecting the desired loop, then you could slide the new loop until you clicked again to confirm.

Now it "confirms" on first click, making it useless.

Can be mitigated somewhat by setting the event to "release", but then you have to hold click to slide, and release to confirm. (need to retrain muscle memory for that)

Seems the "opt-in" suggested above is not such a bad idea.

P.S. slide is similarly broken too

Hmm, now "loop cut and slide" (ctrl+r) is kinda broken. Previously you would click once for selecting the desired loop, then you could slide the new loop until you clicked again to confirm. Now it "confirms" on first click, making it useless. Can be mitigated somewhat by setting the event to "release", but then you have to hold click to slide, and release to confirm. (need to retrain muscle memory for that) Seems the "opt-in" suggested above is not such a bad idea. P.S. slide is similarly broken too
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44278
No description provided.